# oneDNN

./: .buildinfo  .flake8  .gitignore  .gitmodules  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODING_STANDARDS.md  MAINTAINERS.md  README.binary.in  README.md  RELEASE_NOTES.md  THIRD-PARTY-PROGRAMS  advanced_topics.html  build_and_link.html  class_dnnl_graph_allocator.html  class_dnnl_graph_compiled_partition.html  class_dnnl_graph_graph.html  class_dnnl_graph_logical_tensor.html  class_dnnl_graph_op.html  class_dnnl_graph_partition.html  class_dnnl_graph_tensor.html  class_simple_memory_pool_t.html  dev_guide_attributes.html  dev_guide_attributes_accumulation_mode.html  dev_guide_attributes_deterministic.html  dev_guide_attributes_dropout.html  dev_guide_attributes_fpmath_mode.html  dev_guide_attributes_post_ops.html  dev_guide_attributes_quantization.html  dev_guide_attributes_rounding_mode.html  dev_guide_attributes_scratchpad.html  dev_guide_basic_concepts.html  dev_guide_batch_normalization.html  dev_guide_benchdnn.html  dev_guide_binary.html  dev_guide_build.html  dev_guide_build_options.html  dev_guide_c_and_cpp_apis.html  dev_guide_concat.html  (+683 more)
src/cpu/aarch64/: CMakeLists.txt  acl_binary.cpp  acl_convolution_utils.cpp  acl_convolution_utils.hpp  acl_deconvolution.hpp  acl_depthwise_convolution.cpp  acl_depthwise_convolution.hpp  acl_eltwise.cpp  acl_eltwise.hpp  acl_gemm_convolution.cpp  acl_gemm_convolution.hpp  acl_indirect_gemm_convolution.cpp  acl_indirect_gemm_convolution.hpp  acl_inner_product.cpp  acl_inner_product.hpp  acl_layer_normalization.hpp  acl_pooling.cpp  acl_pooling.hpp  acl_reorder.cpp  acl_reorder.hpp  acl_softmax.cpp  acl_softmax.hpp  acl_threadpool_scheduler.hpp  acl_utils.cpp  acl_winograd_convolution.cpp  acl_winograd_convolution.hpp  cpu_isa_traits.cpp  cpu_isa_traits.hpp  cpu_reducer.cpp  eltwise_lut.cpp  eltwise_lut.hpp  jit_brdgmm_dw_conv.cpp  jit_brdgmm_dw_conv.hpp  jit_brgemm_1x1_conv.cpp  jit_brgemm_1x1_conv.hpp  jit_brgemm_conv.cpp  jit_brgemm_conv.hpp  jit_brgemm_conv_bwd.cpp  jit_brgemm_conv_bwd.hpp  jit_brgemm_conv_comp_pad_kernel.cpp  (+77 more)
src/cpu/aarch64/brgemm/: brgemm.cpp  brgemm_types.hpp  brgemm_utils.cpp  brgemm_utils.hpp  jit_brdgmm_kernel.cpp  jit_brdgmm_kernel.hpp  jit_brgemm_kernel.cpp  jit_brgemm_sme_kernel.cpp
src/cpu/aarch64/injectors/: jit_uni_binary_injector.cpp  jit_uni_eltwise_injector.cpp  jit_uni_eltwise_injector.hpp  jit_uni_postops_injector.cpp  jit_uni_postops_injector.hpp
src/cpu/aarch64/lut/: CMakeLists.txt  lut_gen.cpp
src/cpu/aarch64/matmul/: acl_lowp_matmul.cpp  acl_lowp_matmul.hpp  acl_lowp_matmul_sq.cpp  acl_lowp_matmul_sq.hpp  acl_matmul.cpp  acl_matmul.hpp  acl_matmul_utils.cpp  acl_matmul_utils.hpp  brgemm_matmul.cpp  brgemm_matmul.hpp  brgemm_matmul_copy_utils.cpp  brgemm_matmul_reorders.cpp  brgemm_matmul_reorders.hpp  brgemm_matmul_utils.cpp  brgemm_matmul_utils.hpp  jit_bf16_matmul.cpp  jit_bf16_matmul.hpp  jit_int8_kernel_types.hpp  jit_int8_matmul.cpp  jit_int8_matmul.hpp  jit_int8_matmul_utils.cpp  jit_int8_matmul_utils.hpp  kai_matmul.cpp  kai_matmul.hpp
src/cpu/aarch64/prelu/: jit_uni_prelu_forward.cpp  jit_uni_prelu_forward.hpp
src/cpu/aarch64/reorder/: acl_reorder.cpp  acl_reorder.hpp  jit_blk_reorder.cpp  jit_blk_reorder.hpp  jit_blk_reorder_kernel.cpp  jit_uni_reorder.cpp  jit_uni_reorder.hpp  jit_uni_reorder_kernel.cpp  jit_uni_reorder_kernel.hpp  jit_uni_reorder_utils.cpp  jit_uni_reorder_utils.hpp
src/cpu/aarch64/rnn/: brgemm_cell_common_bwd.cpp  brgemm_cell_common_bwd.hpp  brgemm_cell_common_fwd.cpp  brgemm_cell_common_fwd.hpp  brgemm_cell_common_reorders.cpp  brgemm_cell_common_reorders.hpp  rnn_brgemm_utils.cpp  rnn_brgemm_utils.hpp
src/cpu/aarch64/shuffle/: jit_uni_shuffle.cpp  jit_uni_shuffle.hpp
src/cpu/aarch64/ukernel/: attr_params.hpp  brgemm.cpp  brgemm.hpp  transform.cpp  transform.hpp
src/cpu/aarch64/utils/: jit_io_helper.cpp  jit_io_helper.hpp  jit_io_helper_v2.cpp  jit_io_helper_v2.hpp
src/graph/interface/: CMakeLists.txt  allocator.cpp  allocator.hpp  backend.cpp  c_types_map.hpp  compiled_partition_test.cpp  constant_tensor_cache.cpp  constant_tensor_cache.hpp  graph.cpp  graph.hpp  logical_tensor.cpp  logical_tensor.hpp  op.hpp  op_def.hpp  op_def_constraint.cpp  op_def_constraint.hpp  op_schema.cpp  op_schema.hpp  opset.hpp  partition.cpp  partition.hpp  partition_hashing.cpp  partition_hashing.hpp  partition_impl.hpp  shape_infer.cpp  shape_infer.hpp  tensor.cpp  tensor.hpp
src/sycl/: CMakeLists.txt  sycl_cpu_engine.hpp  sycl_device_info.cpp  sycl_engine_base.hpp  sycl_stream.hpp  sycl_stream_submit_cpu_primitive.cpp  sycl_stream_submit_cpu_primitive.hpp  sycl_utils.hpp
src/xpu/: CMakeLists.txt  context.hpp  stream_profiler.cpp  stream_profiler.hpp  utils.cpp  utils.hpp
src/xpu/ocl/: CMakeLists.txt  buffer_memory_storage.cpp  buffer_memory_storage.hpp  context.hpp  engine_factory.hpp  engine_id.hpp  engine_impl.hpp  memory_storage.hpp  memory_storage_base.hpp  stream_impl.cpp  stream_impl.hpp  stream_profiler.cpp  stream_profiler.hpp  usm_memory_storage.cpp  usm_memory_storage.hpp  usm_utils.cpp  usm_utils.hpp  utils.cpp  utils.hpp  utils_shared.cpp  verbose.hpp
src/xpu/ocl/capi/: engine.cpp  memory.cpp  primitive.cpp  stream.cpp
src/xpu/sycl/: buffer_memory_storage.cpp  buffer_memory_storage.hpp  c_types_map.hpp  compat.cpp  compat.hpp  context.hpp  engine_factory.cpp  engine_factory.hpp  engine_id.hpp  engine_impl.cpp  engine_impl.hpp  memory_storage.hpp  memory_storage_base.cpp  memory_storage_base.hpp  memory_storage_helper.hpp  stream_impl.cpp  stream_impl.hpp  stream_profiler.cpp  stream_profiler.hpp  types.hpp  usm_memory_storage.cpp  usm_memory_storage.hpp  utils.cpp  utils.hpp  verbose.hpp
src/xpu/sycl/capi/: capi_engine.cpp  (+3 more)
src/xpu/ze/: CMakeLists.txt  context.hpp  engine_factory.cpp  engine_factory.hpp  engine_id.hpp  engine_impl.cpp  engine_impl.hpp  memory_storage.cpp  memory_storage.hpp  stream_impl.cpp  stream_impl.hpp  stream_profiler.cpp  stream_profiler.hpp  usm_utils.cpp  usm_utils.hpp  utils.cpp  utils.hpp  verbose.hpp
(+20332 files in other folders)
